the cards will add automaticly

--- a/list_Of_Magazines.html
+++ b/list_Of_Magazines.html
@@ -80,11 +80,11 @@
           <div class="border-start"></div>
           <div class="btn-group btn-group-toggle" data-bs-toggle="buttons">
             <label class="btn btn-secondary active">
-              <input type="radio" name="card-layout" id="vertical-radio" value="vertical" checked hidden />
+              <input type="radio" name="card-layout" id="vertical-radio" value="vertical"  hidden />
               <i class="bi bi-grid-3x2-gap-fill"></i>
             </label>
             <label class="btn btn-secondary">
-              <input type="radio" name="card-layout" id="horizontal-radio" value="horizontal"  hidden />
+              <input type="radio" name="card-layout" id="horizontal-radio" value="horizontal" checked hidden />
               <i class="bi bi-list-ul"></i>
             </label>
           </div>
@@ -93,102 +93,7 @@
       </div>
 
       <div class="grid_container row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-          <div class="card h-90">
-            <div  class="card_row ">
-              <div  class="card_img">
-                <img src="./img/stor_img.jpg" class="card-img-top" alt="..." />
-              </div>
-              <div class="">
-                <div class="card-body">
-                  <h5 class="card-title fs-3 fw-bold">Sidi maarouf</h5>
-                  <p>
-                    <i class="fa-solid fa-location-dot"></i>
-                    <span> Casablanca, </span><span class="fst-italic">sidi maarouf</span>
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-90">
-            <div class="">
-              <div class="">
-                <img src="./img/stor_img.jpg" class="card-img-top" alt="..." />
-              </div>
-              <div class="">
-                <div class="card-body">
-                  <h5 class="card-title fs-3 fw-bold">Sidi maarouf</h5>
-                  <p>
-                    <i class="fa-solid fa-location-dot"></i>
-                    <span> Casablanca, </span><span class="fst-italic">sidi maarouf</span>
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-90">
-            <div class="">
-              <div class="">
-                <img src="./img/stor_img.jpg" class="card-img-top" alt="..." />
-              </div>
-              <div class="">
-                <div class="card-body">
-                  <h5 class="card-title fs-3 fw-bold">Sidi maarouf</h5>
-                  <p>
-                    <i class="fa-solid fa-location-dot"></i>
-                    <span> Casablanca, </span><span class="fst-italic">sidi maarouf</span>
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-90">
-            <div class="">
-              <div class="">
-                <img src="./img/stor_img.jpg" class="card-img-top" alt="..." />
-              </div>
-              <div class="">
-                <div class="card-body">
-                  <h5 class="card-title fs-3 fw-bold">Sidi maarouf</h5>
-                  <p>
-                    <i class="fa-solid fa-location-dot"></i>
-                    <span> Casablanca, </span><span class="fst-italic">sidi maarouf</span>
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card h-90">
-            <div class="">
-              <div class="">
-                <img src="./img/stor_img.jpg" class="card-img-top" alt="..." />
-              </div>
-              <div class="">
-                <div class="card-body">
-                  <h5 class="card-title fs-3 fw-bold">Sidi maarouf</h5>
-                  <p>
-                    <i class="fa-solid fa-location-dot"></i>
-                    <span> Casablanca, </span><span class="fst-italic">sidi maarouf</span>
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+       
       </div>
     </div>
   </div>
