fix the switcher of the way the cards appers when the selecte a spesific city

--- a/list_Of_Magazines.html
+++ b/list_Of_Magazines.html
@@ -69,12 +69,12 @@
     <div style="width: 90%" class="d-flex justify-content-center flex-column align-items-center gap-4">
       <div class="container">
         <div class="d-flex align-items-center gap-2">
-          <select class="form-select me-2">
+          <select id="select-city-filter" class="form-select me-2">
             <option selected>All</option>
-            <option value="1">Casa Blanca</option>
-            <option value="2">Agadir</option>
-            <option value="3">Rabat</option>
-            <option value="3">Tanger</option>
+            <option value="Casablanca">Casablanca</option>
+            <option value="Agadir">Agadir</option>
+            <option value="Rabat">Rabat</option>
+            <option value="Tanger">Tanger</option>
           </select>
           <hr class="flex-grow-1 my-2" />
           <div class="border-start"></div>
