--- a/list_Of_Magazines.html
+++ b/list_Of_Magazines.html
@@ -34,7 +34,7 @@
     </div>
   </header>
   <div class="l-navbar" id="nav-bar">
-    <nav class="nav">
+    <nav id="nav">
       <div>
         <a href="#" class="nav_logo">
           <span class="nav_icon aside_logo"><img src="./img/logo.png" alt="" /></span>
@@ -106,6 +106,7 @@
   <script src="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"></script>
 
   <script src="./listOfMagazines.js"></script>
+  <script src="./tamplet.js"></script>
 </body>
 
 </html>
