--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                             placeholder="Password" />
                     </div>
 
+                    <div id="error-message" class="text-danger d-none">Email ou mot de passe incorrect</div>
+
                     <div class="text-center text-lg-start mt-4 pt-2">
                         <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg"
                             style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
