--- a/list_Of_Magazines.html
+++ b/list_Of_Magazines.html
@@ -34,36 +34,35 @@
     </div>
   </header>
   <div class="l-navbar" id="nav-bar">
-
     <nav id="nav">
-
-      <div>
-        <a href="#" class="nav_logo">
-          <span class="nav_icon aside_logo"><img src="./img/logo.png" alt="" /></span>
-          <span class="nav_logo-name">Aswak Salam</span>
-        </a>
-        <div class="nav_list">
-          <a href="#" class="nav_link active">
-            <i class="bx bxs-dashboard nav_icon"></i>
-            <!-- <i class="bx bx-grid-alt nav_icon"></i> -->
-            <span class="nav_name">Dashboard</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class="bx bxs-store-alt nav_icon"></i>
-            <span class="nav_name">Magasins</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class="bx bxs-add-to-queue nav_icon"></i>
-            <span class="nav_name">Ajouter Magasin</span>
-          </a>
+        <div>
+            <a href="#" class="nav_logo">
+                <span class="nav_icon aside_logo"><img src="./img/logo.png" alt="" /></span>
+                <span class="nav_logo-name">Aswak Salam</span>
+            </a>
+            <div class="nav_list">
+                <a href="./dashbord.html" class="nav_link ">
+                    <i class="bx bxs-dashboard nav_icon"></i>
+                    <!-- <i class="bx bx-grid-alt nav_icon"></i> -->
+                    <span class="nav_name">Dashboard</span>
+                </a>
+                <a href="./list_Of_Magazines.html" class="nav_link active">
+                    <i class="bx bxs-store-alt nav_icon"></i>
+                    <span class="nav_name">Magasins</span>
+                </a>
+                <a href="#" class="nav_link">
+                    <i class="bx bxs-add-to-queue nav_icon"></i>
+                    <span class="nav_name">Ajouter Magasin</span>
+                </a>
+            </div>
         </div>
-      </div>
-      <a href="#" class="nav_link">
-        <i class="bx bx-log-out nav_icon"></i>
-        <span class="nav_name">SignOut</span>
-      </a>
+        <a href="#" class="nav_link">
+            <i class="bx bx-log-out nav_icon"></i>
+            <span class="nav_name">SignOut</span>
+        </a>
     </nav>
-  </div>
+</div>
+
 
   <!--Container Main start-->
   <div class="bg-light d-flex justify-content-center flex-column align-items-center">
@@ -106,10 +105,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"></script>
-
+  
+  <script src="./tamplet.js"></script>
   <script src="./listOfMagazines.js"></script>
 
-  <script src="./tamplet.js"></script>
 
 </body>
 
