mise a jour dashboard js

--- a/dashboard_CA.html
+++ b/dashboard_CA.html
@@ -159,9 +159,14 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         var xValues = ["Jan", "Fev", "Mar", "Avr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
-        // var yValues = [55, 49, 44, 24, 15, 49, 44, 24, 15, 49, 44, 24, 15];
-        let caData_JSON = localStorage.getItem("caData");
-        let yValues = JSON.parse(caData_JSON);
+        let tableData_JSON = localStorage.getItem("tableData");
+        let tableData = JSON.parse(tableData_JSON);
+        let chiffreAffaireData = [];
+        for (let i = 0; i < tableData.length; i++) {
+            chiffreAffaireData.push(parseFloat(tableData[i].chiffreAffaire));
+        }
+        
+        let yValues = chiffreAffaireData;
 
 
         new Chart("myChart", {
@@ -185,7 +190,7 @@
                     y: {
                         beginAtZero: true,
                         ticks: {
-                            stepSize: 100
+                            stepSize: 10000
                         }
                     }
                 }
