--- a/dashbord.html
+++ b/dashbord.html
@@ -50,7 +50,7 @@
                         <i class="bx bxs-store-alt nav_icon"></i>
                         <span class="nav_name">Magasins</span>
                     </a>
-                    <a href="#" class="nav_link">
+                    <a href="./ajouter.html" class="nav_link">
                         <i class="bx bxs-add-to-queue nav_icon"></i>
                         <span class="nav_name">Ajouter Magasin</span>
                     </a>
