--- a/list_Of_Magazines.html
+++ b/list_Of_Magazines.html
@@ -50,13 +50,13 @@
                     <i class="bx bxs-store-alt nav_icon"></i>
                     <span class="nav_name">Magasins</span>
                 </a>
-                <a href="#" class="nav_link">
+                <a href="./ajouter.html" class="nav_link">
                     <i class="bx bxs-add-to-queue nav_icon"></i>
                     <span class="nav_name">Ajouter Magasin</span>
                 </a>
             </div>
         </div>
-        <a href="#" class="nav_link">
+        <a href="./index.html" class="nav_link">
             <i class="bx bx-log-out nav_icon"></i>
             <span class="nav_name">SignOut</span>
         </a>
