--- a/ajouter.html
+++ b/ajouter.html
@@ -19,6 +19,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="./listOfMagazines.css" />
+  
 
   <title>Magazines</title>
 </head>
@@ -43,7 +44,6 @@
         <div class="nav_list">
           <a href="./dashbord.html" class="nav_link ">
             <i class="bx bxs-dashboard nav_icon"></i>
-            <!-- <i class="bx bx-grid-alt nav_icon"></i> -->
             <span class="nav_name">Dashboard</span>
           </a>
           <a href="./list_Of_Magazines.html" class="nav_link ">
@@ -68,7 +68,6 @@
   <div class="bg-light d-flex justify-content-center flex-column align-items-center">
     <h1 class="fw-bold">Ajouter Magasin</h1>
     <div class="container">
-      <h2 class="mb-4">Add New Store</h2>
       <form>
          <div class="row mb-3">
            <label for="exampleInputNom" class="col-sm-2 col-form-label fw-bold">Nom :</label>
@@ -79,7 +78,12 @@
          <div class="row mb-3">
            <label for="exampleInputVille" class="col-sm-2 col-form-label fw-bold">Ville :</label>
            <div class="col-sm-10">
-             <input type="text" class="form-control" id="exampleInputVille" placeholder="Enter city">
+             <!--<input type="text" class="form-control" id="exampleInputVille" placeholder="Enter city">-->
+             <select class="form-control" id="exampleInputVille">
+              <option value="" disabled selected>Enter city</option>
+              <option value="section1">Casablanca</option>
+              <option value="section1">Agadir</option>
+            </select>
            </div>
          </div>
          <div class="row mb-3">
@@ -104,7 +108,6 @@
      
     
   </div>
-  </div>
 
   <!--Container Main end-->
 
@@ -120,3 +123,5 @@
 </body>
 
 </html>
+
+
