--- a/dashbord.html
+++ b/dashbord.html
@@ -84,6 +84,14 @@
                     </ul>
 
                 </div><br>
+                <div class="year-selector">
+                    <select id="year-select" class="form-select">
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                        <option value="2024">2024</option>
+                        <!-- Ajoutez d'autres années au besoin -->
+                    </select>
+                </div>
 
                 <div class="row row-cols-1 row-cols-md-3 g-3 justify-content-between ">
                     <!-- Card 1 -->
