--- a/table.html
+++ b/table.html
@@ -68,7 +68,7 @@
     <!--Container Main start-->
     <div class="height-100 bg-light">
       <h4>Magasin :</h4>
-      <h4><small>Sidi maarouf-Casablanca</small></h4><br>
+      <h4><small id="magasin-title">Sidi maarouf-Casablanca</small></h4><br>
       <div class="col-md-6 mx-auto">
         
             <div class="table-responsive">
@@ -105,7 +105,7 @@
                 <label for="editCategory">Nom du Magasin</label><br>
                 <select id="editCategory" name="editCategory">
                     <option value="Magasin">Sidi maarouf-Casablanca</option>
-                </select><br>
+                </select><br>   
                 <label for="CA">Chiffres d'affaire (en dhs)</label><br>
                 <input type="text" id="CA" name="CA"><br>
                 <label for="effectif">Effectifs</label><br>
