update for ajouter magazine

--- a/ajouter.html
+++ b/ajouter.html
@@ -81,8 +81,8 @@
              <!--<input type="text" class="form-control" id="exampleInputVille" placeholder="Enter city">-->
              <select class="form-control" id="exampleInputVille">
               <option value="" disabled selected>Enter city</option>
-              <option value="section1">Casablanca</option>
-              <option value="section1">Agadir</option>
+              <option >Casablanca</option>
+              <option >Agadir</option>
             </select>
            </div>
          </div>
