add the table validation numbers

--- a/table.html
+++ b/table.html
@@ -121,11 +121,11 @@
            <span class="close" onclick="closeEditPopup()">&times;</span>
            <h3>Modifier les données</h3>
            <label for="editCA">Chiffres d'affaire (en dhs)</label><br>
-           <input type="text" id="modCa" name="editCA"><br>
+           <input type="number" id="modCa" name="editCA"><br>
            <label for="editEffectif">Effectifs</label><br>
-           <input type="text" id="modEffectif" name="editEffectif"><br>
+           <input type="number" id="modEffectif" name="editEffectif"><br>
            <label for="surface">Surface (m²)</label><br>
-           <input type="text" id="modSurface" name="surface"><br><br>
+           <input type="number" id="modSurface" name="surface"><br><br>
            <button id="saveEdit"onclick="saveEditedData()">Enregistrer</button>
        </div>
   </div>
