--- a/ajouter.html
+++ b/ajouter.html
@@ -20,7 +20,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="./listOfMagazines.css" />
   
-
   <title>Magazines</title>
 </head>
 
@@ -93,9 +92,9 @@
            </div>
          </div>
          <div class="row mb-3">
-           <label for="exampleInputDate" class="col-sm-2 col-form-label fw-bold">Date D'ouverture :</label>
+           <label for="exampleInputDate" class="col-sm-2 col-form-label fw-bold">Year D'ouverture :</label>
            <div class="col-sm-10">
-             <input type="date" class="form-control" id="exampleInputDate" aria-describedby="emailHelp">
+             <input type="number" class="form-control" id="exampleInputDate" aria-describedby="emailHelp">
            </div>
          </div>
          <div class="row">
