--- a/table.html
+++ b/table.html
@@ -104,7 +104,7 @@
               </select><br>
               <label for="editCategory">Nom du Magasin</label><br>
               <select id="editCategory" name="editCategory">
-                  <option value="Magasin">Sidi maarouf-Casablanca</option>
+                  <option value="Magasin" id="magasin-title">Sidi maarouf-Casablanca</option>
               </select><br>   
               <label for="CA">Chiffres d'affaire (en dhs)</label><br>
               <input type="text" id="CA" name="CA"><br>
