--- a/ajouter.html
+++ b/ajouter.html
@@ -19,7 +19,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="./listOfMagazines.css" />
-  
+
   <title>Magazines</title>
 </head>
 
@@ -94,7 +94,7 @@
          <div class="row mb-3">
            <label for="exampleInputDate" class="col-sm-2 col-form-label fw-bold">Year D'ouverture :</label>
            <div class="col-sm-10">
-             <input type="number" class="form-control" id="exampleInputDate" aria-describedby="emailHelp">
+             <input type="number" class="form-control" id="exampleInputDate" min="2000" max="2024">
            </div>
          </div>
          <div class="row">
