fix the gub of the main js table

--- a/table.html
+++ b/table.html
@@ -112,7 +112,7 @@
               <input type="text" id="effectif" name="effectif"><br>
               <label for="surface">Surface (m²)</label><br>
               <input type="text" id="surface" name="surface"><br><br>
-              <button type="button" id="addButton" onclick="addToTable()">Ajouter</button>
+              <button type="button" id="addButton" >Ajouter</button>
           </form>
       </div>  
   </div>
