--- a/dashbord.html
+++ b/dashbord.html
@@ -85,10 +85,12 @@
 
                 </div><br>
                 <div class="year-selector">
-                    <select id="year-select" class="form-select">
-                        <option value="2022">2022</option>
-                        <option value="2023">2023</option>
+                    <select id="year-select" class="form-select" onclick="selected_year()">
                         <option value="2024">2024</option>
+                        <option value="2023">2023</option>
+                        <option value="2022">2022</option>
+                        <option value="2021">2021</option>
+                        <option value="2020">2020</option>
                         <!-- Ajoutez d'autres années au besoin -->
                     </select>
                 </div>
@@ -124,6 +126,8 @@
                                 50% réalisent un chiffre d'affaires supérieur à ce résultat.</p>
                         </div>
                     </div>
+                    <script src="graph.js"></script>
+
                     <canvas id="myChart" style="width:100%;max-width:600px;max-height: 300px;"></canvas>
 
                     <div class="card border shadow mb-4 ">
@@ -150,46 +154,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-        var xValues = ["Jan", "Fev", "Mar", "Avr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
-
-        let tableData_JSON = localStorage.getItem("tableData");
-        let tableData = JSON.parse(tableData_JSON)||[];
-        let chiffreAffaireData = [];
-        for (let i = 0; i < tableData.length; i++) {
-            chiffreAffaireData.push(parseFloat(tableData[i].chiffreAffaire));
-        }
-        
-        let yValues = chiffreAffaireData;
-
-        new Chart("myChart", {
-            type: "bar",
-            data: {
-                labels: xValues,
-                datasets: [{
-                    backgroundColor: "blue",
-                    data: yValues
-                }]
-            },
-            options: {
-                plugins: {
-                    legend: { display: false },
-                    title: {
-                        display: true,
-                        text: "Products sold this year"
-                    }
-                },
-                scales: {
-                    y: {
-                        beginAtZero: true,
-                        ticks: {
-                            stepSize: 10000
-                        }
-                    }
-                }
-            }
-        });
-    </script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
@@ -200,6 +164,7 @@
     <script src="./tamplet.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"></script>
+    <script src="selected_year.js"></script>
     <script src="display_moyen_arrith.js" defer></script>
     <script src="display_mode.js" defer></script>
     <script src="display_mediane.js" defer></script>
